<resources>
    <string name="app_name">Be better</string>
    <string name="bigText">DON\'T SWEAR</string>
    <string name="settingText">Settings</string>
    <string name="total">Total amount of curses</string>
    <string name="totalBless">Total amount of curseless days</string>
    <string name="add">ADD</string>
    <string name="sub">SUB</string>
    <string name="tot_0">0</string>
    <string name="cursesBegin">Amount of curses by \t</string>
    <string name="of">\tof\t</string>
    <string name="snacksToBuy"> to buy:</string>
    <string name="PushUps"> to do: </string>
    <string name="blessBegin">Amount of blesses \t</string>
    <string name="Goods">:\nGoods to acquire: </string>
    <string name="Penalty">What you should do if fail once</string>
    <string name="BigPenalty">What you should buy if fail in a fifth time</string>
    <string name="Hint">Write your penalty here or leave blank</string>
    <string name="save">Save</string>
</resources>