<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingTW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#6667A6"
            android:gravity="center"
            android:text="@string/bigText"
            android:textColor="#FFFFFF"
            android:textSize="80sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/curseLT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/curseTW"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/curseTW2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/tot_0"
                android:textColor="#F44336"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addCurseButton"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_gravity="center"
                    android:layout_margin="0sp"
                    android:layout_weight="1"
                    android:onClick="AddCurse"
                    android:padding="0dp"
                    android:text="@string/add"
                    android:hapticFeedbackEnabled="true"
                    android:textAlignment="center"
                    app:cornerRadius="100sp" />

                <Button
                    android:id="@+id/subCurseButton"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_gravity="center"
                    android:layout_margin="0sp"
                    android:layout_weight="1"
                    android:onClick="SubCurse"
                    android:padding="0dp"
                    android:text="@string/sub"
                    android:hapticFeedbackEnabled="true"
                    android:textAlignment="center"
                    app:cornerRadius="100sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/curselessLT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/curselessTW"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totalBless"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/curselessTW2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20sp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/tot_0"
                android:textColor="#2196F3"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addCurselessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="0sp"
                    android:layout_weight="1"
                    android:onClick="AddCurseless"
                    android:text="@string/add"
                    android:hapticFeedbackEnabled="true"
                    app:cornerRadius="100sp" />

                <Button
                    android:id="@+id/subCurselessButton"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="0sp"
                    android:layout_weight="1"
                    android:onClick="SubCurseless"
                    android:text="@string/sub"
                    android:hapticFeedbackEnabled="true"
                    app:cornerRadius="100sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100sp"
            android:layout_weight="0"
            android:onClick="goToSettings"
            android:text="@string/settingText"
            android:textAlignment="center"
            app:cornerRadius="100sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>